--- a/Dockerfile_M1
+++ b/Dockerfile_M1
@@ -3,8 +3,10 @@ MAINTAINER jialun<jialun.jiang@campus.tu-berlin.de>
 WORKDIR /home/jovyan/work/
 
 # Install Spacy:
-RUN pip install -U pip setuptools wheel
-RUN pip install -U 'spacy[apple]'
+python -m venv .env
+source .env/bin/activate
+pip install -U pip setuptools wheel
+pip install -U 'spacy[apple]'
 RUN python -m spacy download de_core_news_lg
 
 # Install Tensorflow:
